fix scrollbar weirdness

--- a/web/src/components/GemLinkViewer/styles.module.css
+++ b/web/src/components/GemLinkViewer/styles.module.css
@@ -1,3 +1,9 @@
+.gemLinks {
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+}
+
 .label {
   text-align: center;
   color: var(--primary);
