--- a/web/src/components/Sidebar/styles.module.css
+++ b/web/src/components/Sidebar/styles.module.css
@@ -31,6 +31,7 @@
   flex-direction: column;
   gap: var(--size-2);
   overflow: auto;
+  width: 20rem;
 }
 
 .sidebarContents:not(.expand) {
